some UI changes and email configuration was done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 # { Datasource }
 #===============
-spring.datasource.url=jdbc:mysql://localhost:3308/prison
+spring.datasource.url=jdbc:mysql://localhost:3306/prison
 spring.datasource.username=root
 spring.datasource.password=12345
 # { Hikari properties }
@@ -44,6 +44,7 @@ server.servlet.session.timeout=20m
 #server.servlet.session.cookie.secure=true
 
 
+
 # { File up load properties }
 #============================
 # Max file size.
@@ -64,11 +65,12 @@ spring.main.allow-bean-definition-overriding=true
 # devtool properties would change normally with spring update
 #       hence, remember to refer spring documentation
 
+
 # { Email Service }
 #==================
 spring.mail.host=smtp.gmail.com
-spring.mail.username=exciseuser@gmail.com
-spring.mail.password=excise123
+spring.mail.username=departmentofprisons@gmail.com
+spring.mail.password=Prisons123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
